sahne.h


typedef uint64_t sahne_handle_t;
typedef uint64_t sahne_task_id_t;
typedef int32_t sahne_error_t; 
#define SAHNE_SUCCESS 0
#define SAHNE_ERROR_OUT_OF_MEMORY 1
#define SAHNE_ERROR_INVALID_PARAMETER 3
#define SAHNE_ERROR_RESOURCE_NOT_FOUND 4
#define SAHNE_ERROR_PERMISSION_DENIED 5
#define SAHNE_ERROR_RESOURCE_BUSY 6
#define SAHNE_ERROR_INTERRUPTED 7
#define SAHNE_ERROR_NO_MESSAGE 8
#define SAHNE_ERROR_INVALID_OPERATION 9
#define SAHNE_ERROR_NOT_SUPPORTED 10
#define SAHNE_ERROR_UNKNOWN_SYSCALL 11
#define SAHNE_ERROR_TASK_CREATION_FAILED 12
#define SAHNE_ERROR_INVALID_HANDLE 13
#define SAHNE_ERROR_HANDLE_LIMIT_EXCEEDED 14
#define SAHNE_ERROR_NAMING_ERROR 15
#define SAHNE_ERROR_COMMUNICATION_ERROR 16
#define SAHNE_ERROR_WOULD_BLOCK 17 
#define SAHNE_ERROR_DISCONNECTED 18 
#define SAHNE_SYSCALL_MEMORY_ALLOCATE 1
#define SAHNE_SYSCALL_RESOURCE_SEEK 103
#define SAHNE_SYSCALL_RESOURCE_STAT 104
#define SAHNE_SYSCALL_TASK_WAIT     105
#define SAHNE_SYSCALL_CHANNEL_CREATE 106
#define SAHNE_SYSCALL_CHANNEL_CONNECT 107
#define SAHNE_SYSCALL_CHANNEL_SEND 108
#define SAHNE_SYSCALL_CHANNEL_RECEIVE 109
#define SAHNE_SYSCALL_POLL          110
#define SAHNE_MODE_READ (1 << 0)
#define SAHNE_MODE_WRITE (1 << 1)
#define SAHNE_MODE_CREATE (1 << 2)
#define SAHNE_MODE_NONBLOCK (1 << 5) 
#define SAHNE_KERNEL_INFO_VERSION_MAJOR 1
#define SAHNE_KERNEL_INFO_TOTAL_MEMORY_BYTES 6 
#define SAHNE_SEEK_SET 0 
#define SAHNE_SEEK_CUR 1 
#define SAHNE_SEEK_END 2 
typedef struct ResourceStatus_t {
    uint64_t size;       
    uint32_t type_flags; 
    uint32_t link_count; 
    uint32_t reserved;   
} ResourceStatus_t;
typedef uint32_t PollEventFlags_t;
#define SAHNE_POLL_NONE       0
#define SAHNE_POLL_READABLE   (1 << 0)
#define SAHNE_POLL_WRITABLE   (1 << 1)
#define SAHNE_POLL_ERROR      (1 << 2)
#define SAHNE_POLL_DISCONNECTED (1 << 3)
typedef struct PollEntry_t {
    sahne_handle_t handle;         
    PollEventFlags_t events_in;    
    PollEventFlags_t events_out;   
} PollEntry_t;
int64_t sahne_raw_syscall(uint64_t number, uint64_t arg1, uint64_t arg2, uint64_t arg3, uint64_t arg4, uint64_t arg5);
sahne_error_t sahne_mem_allocate(size_t size, void** out_ptr);
sahne_error_t sahne_mem_release(void* ptr, size_t size);
sahne_error_t sahne_mem_create_shared(size_t size, sahne_handle_t* out_handle);
sahne_error_t sahne_mem_map_shared(sahne_handle_t handle, size_t offset, size_t size, void** out_ptr);
sahne_error_t sahne_mem_unmap_shared(void* addr, size_t size);
sahne_error_t sahne_task_spawn(sahne_handle_t code_handle, const uint8_t* args_ptr, size_t args_len, const sahne_handle_t* initial_handles_ptr, size_t initial_handles_len, sahne_task_id_t* out_task_id);
void sahne_task_exit(int32_t code) __attribute__((noreturn));
sahne_error_t sahne_task_current_id(sahne_task_id_t* out_task_id);
sahne_error_t sahne_task_sleep(uint64_t milliseconds);
sahne_error_t sahne_thread_create(void (*entry_point_fn)(void*), size_t stack_size, void* arg, uint64_t* out_thread_id); 
void sahne_thread_exit(int32_t code) __attribute__((noreturn));
sahne_error_t sahne_task_yield(void);
sahne_error_t sahne_task_wait_for_exit(sahne_task_id_t task_id, int32_t* out_exit_code);
sahne_error_t sahne_resource_acquire(const uint8_t* id_ptr, size_t id_len, uint32_t mode, sahne_handle_t* out_handle);
sahne_error_t sahne_resource_read(sahne_handle_t handle, uint8_t* buffer_ptr, size_t buffer_len, size_t* out_bytes_read);
sahne_error_t sahne_resource_write(sahne_handle_t handle, const uint8_t* buffer_ptr, size_t buffer_len, size_t* out_bytes_written);
sahne_error_t sahne_resource_release(sahne_handle_t handle);
sahne_error_t sahne_resource_control(sahne_handle_t handle, uint64_t request, uint64_t arg, int64_t* out_result);
sahne_error_t sahne_resource_seek(sahne_handle_t handle, uint64_t whence, int64_t offset, uint64_t* out_new_offset);
sahne_error_t sahne_resource_stat(sahne_handle_t handle, ResourceStatus_t* out_status);
sahne_error_t sahne_kernel_get_info(uint32_t info_type, uint64_t* out_value);
sahne_error_t sahne_kernel_get_time(uint64_t* out_time);
sahne_error_t sahne_sync_lock_create(sahne_handle_t* out_handle);
sahne_error_t sahne_sync_lock_acquire(sahne_handle_t handle);
sahne_error_t sahne_sync_lock_release(sahne_handle_t handle);
sahne_error_t sahne_channel_create(sahne_handle_t* out_channel_handle);
sahne_error_t sahne_channel_connect(const uint8_t* channel_id_ptr, size_t channel_id_len, sahne_handle_t* out_channel_handle);
sahne_error_t sahne_channel_send(sahne_handle_t channel_handle, const uint8_t* message_ptr, size_t message_len);
sahne_error_t sahne_channel_receive(sahne_handle_t channel_handle, uint8_t* buffer_ptr, size_t buffer_len, size_t* out_bytes_received);
int64_t sahne_poll(PollEntry_t* entries, size_t num_entries, int64_t timeout_ms);